@@ -108,6 +108,7 @@ ATTR_RESULT = "result"
 ATTR_SESSION_ID = "_session_id_"
 ATTR_TLS = "tls"
 ATTR_TYPE = "type"
+ATTR_SUBSECTION = "subsection"
 ATTR_SUBTYPE = "subtype"
 ATTR_USERNAME = "username"
 ATTR_VALUE = "value"
